# dio-twitter-py-master

./: DockerFile  README.md  consumo_teet.py  docker-compose.yml  pyproject.toml  pyproject.toml.old  testebase.py
src/: connection.py  constants.py  secrets.py  services.py
