[tool.poetry]
name = "dio-twitter-py-master"
version = "0.1.0"
description = "Projeto para finalização da jornada de Python do Bootcamp"
authors = ["guruck <guruck@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
pymongo = "^4.4.1"
tweepy = "^4.14.0"
uvicorn = "^0.23.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
flake8 = "^6.0.0"
black = "^23.7.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
